--- a/vignettes/semlbci.Rmd
+++ b/vignettes/semlbci.Rmd
@@ -127,7 +127,7 @@ its usage by some examples, and then
 present other technical details in the
 following section.
 
-## Find the LBCI for selected free parameters
+## Find the LBCI for Selected Free Parameters
 
 All free parameters can be specified in
 `lavaan` style. For example, the path
@@ -228,7 +228,7 @@ print(out,
 #> 6  6  ab := a*b    ab 0.897   0.427   1.464 0.385 1.409 0.950 0.950
 ```
 
-### Customizing the printout
+### Customizing the Printout
 
 For users familiar with the column names,
 the annotation can be disabled by calling `print()`
@@ -446,7 +446,7 @@ print(out,
 
 # Basic Arguments in `semlbci()`
 
-## `sem_out` and `pars`: The fit object and the parameters
+## `sem_out` and `pars`: The Fit Object and the Parameters
 
 The only required argument for
 `semlbci()` is `sem_out`, the fit
@@ -488,7 +488,7 @@ free parameters (except for variances
 and covariances) and user-defined
 parameters (if any) in a model.
 
-## `ciperc`: The level of confidence
+## `ciperc`: The Level of Confidence
 
 By default, the 95% LBCIs for the
 unstandardized solution will be formed.
@@ -497,7 +497,7 @@ the argument `ciperc` to the desired
 coverage probability, e.g., .95 for 95%,
 .90 for 90%.
 
-## `standardized`: Whether standardized solution is used
+## `standardized`: Whether Standardized Solution Is Used
 
 By default, the LBCIs for the
 unstandardized solution will be formed.
@@ -556,7 +556,49 @@ Enabling parallel processing also has
 the added benefit of showing the
 progress in real time.
 
-## Other arguments
+## `try_k_more_times` and `semlbci_out`
+
+For some models and some parameters,
+the search may be difficult. By
+default, `semlbci()` will try two
+more times, successively changing some
+settings internally. If still failed
+in forming the LBCI, users can try
+to set `try_k_more_times` to a larger
+number slightly larger than 2 (the
+default value) to see whether it can
+help forming the LBCI. This can be done
+without forming other LBCIs again if
+the output of `semlbci()` is passed
+to the new call using `semlbci_out`.
+
+For example, assume that some LBCIs
+could not be found in the first run:
+
+
+``` r
+lbci_some_failed <- semlbci(fit_cfa)
+```
+
+We can call `semlbci()` again,
+increasing `try_k_more_times` to 5,
+and set `semlbci_out` to
+`lbci_some_failed`.
+
+
+``` r
+lbci_try_again <- semlbci(fit_cfa,
+                          try_k_more_times = 5,
+                          semlbci_out = lbci_some_failed)
+```
+
+It will only form LBCIs for parameters
+failed in the first one. The output,
+`lbci_try_again`, will have the original
+LBCIs plus the new ones, if the search
+succeeds.
+
+## Other Arguments
 
 For detailed documentation of other
 arguments, please refer to the help
@@ -567,7 +609,7 @@ options can check the help pages of
 
 # Additional Features
 
-## Multiple-group Models
+## Multiple-Group Models
 
 `semlbci()` supports multiple-group
 models. For example, this is a
@@ -729,7 +771,7 @@ print(fit_lbci_ab_robust,
 #>     ab                0.897    0.305    2.941    0.003    0.353    1.571
 ```
 
-## Latent level parameters
+## Latent Level Parameters
 
 `semlbci()` support forming the LBCIs
 for most free parameters. Not
@@ -740,7 +782,7 @@ parameters based on latent-level
 parameters, such as an indirect effect
 from one latent variable to another.
 
-## More examples
+## More Examples
 
 More examples can be found
 in the "examples" folders in
